--- a/.npmignore
+++ b/.npmignore
@@ -1,21 +1,44 @@
 node_modules
+jspm_packages
+bower_components
 logs
 pids
 lib-cov
 coverage
-build/Release
-test
+nbproject
 
 *.log
 *.pid
 *.seed
 
+*~
+*#
+.grunt
+.lock-wscript
+.tmp
+.sass-cache
+.DS_STORE
+.netbeans
+.idea
+.npm
+.node_history
+.node_repl_history
+.vagrant
+.eslintcache
+
+Thumbs.db
+dump.rdb
+npm-debug.log
+
+test
+CHANGELOG.md
+example.js
+example.html
 .gitignore
 .npmignore
 .editorconfig
-.jshintrc
+.eslintrc
+.eslintignore
 .grunt
 .lock-wscript
 .travis.yml
-example.js
-example.html
