--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,4 @@
-# http://editorconfig.org/
-# Atom Plugin: https://github.com/sindresorhus/atom-editorconfig
-# Sublime Text Plugin: https://github.com/sindresorhus/editorconfig-sublime
-# NetBeans Plugin: https://github.com/welovecoding/editorconfig-netbeans
+# http://editorconfig.org
 
 root = true
 
@@ -12,3 +9,6 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.md]
+indent_size = 4
