--- a/package.json
+++ b/package.json
@@ -17,12 +17,26 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha test",
-    "test:watch": "mocha test -w"
+    "test": "npm run test-server && npm run test-client",
+    "test-server": "mocha test -r test/setup-server.js",
+    "test-client": "karma start"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.2.0",
-    "sinon": "^1.17.7"
+    "sinon": "^1.17.7",
+    "webpack": "^2.5.1"
   }
 }
